src/objects/Int_Agreement__c.object
<CustomObject>
    <description>Int Agreement</description>
    <fields>
        <fullName>Accrued_Interest_Amount__c</fullName>
        <description>Accrued Interest Amount</description>
        <label>Accrued Interest Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreement_Activation_Date__c</fullName>
        <description>Agreement Activation Date</description>
        <label>Agreement Activation Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Maturity_Date__c</fullName>
        <description>Agreement Maturity Date</description>
        <label>Agreement Maturity Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <description>Agreement Number</description>
        <label>Agreement Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Agreement_Original_Duration__c</fullName>
        <description>Agreement Original Duration</description>
        <label>Agreement Original Duration</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Rate__c</fullName>
        <description>Agreement Rate</description>
        <label>Agreement Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Source_System__c</fullName>
        <description>Agreement Source System</description>
        <label>Agreement Source System</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Start_Date__c</fullName>
        <description>Agreement Start Date</description>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Status__c</fullName>
        <description>Agreement Status</description>
        <label>Agreement Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Termination_Date__c</fullName>
        <description>Agreement Termination Date</description>
        <label>Agreement Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Write_Off_Date__c</fullName>
        <description>Agreement Write Off Date</description>
        <label>Agreement Write Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amortization_Type_Code__c</fullName>
        <description>Amortization Type Code</description>
        <label>Amortization Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrears_Amount__c</fullName>
        <description>Arrears Amount</description>
        <label>Arrears Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Collection_Indicator__c</fullName>
        <description>Billing Collection Indicator</description>
        <label>Billing Collection Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brokered_Indicator__c</fullName>
        <description>Brokered Indicator</description>
        <label>Brokered Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Costs_Of_Funds_Percentage__c</fullName>
        <description>Costs Of Funds Percentage</description>
        <label>Costs Of Funds Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <description>Currency Code</description>
        <label>Currency Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Interest_Rate_Type_Code__c</fullName>
        <description>Current Interest Rate Type Code</description>
        <label>Current Interest Rate Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_Count_Convention_Code__c</fullName>
        <description>Day Count Convention Code</description>
        <label>Day Count Convention Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_In_Arrears__c</fullName>
        <description>Days In Arrears</description>
        <label>Days In Arrears</label>
        <length>19</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Date__c</fullName>
        <description>Deal Date</description>
        <label>Deal Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delinquency_Reason_Code__c</fullName>
        <description>Delinquency Reason Code</description>
        <label>Delinquency Reason Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Payment_Amount__c</fullName>
        <description>Deposit Payment Amount</description>
        <label>Deposit Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Down_Payment_Amount__c</fullName>
        <description>Down Payment Amount</description>
        <label>Down Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EAD_Ex_Ante__c</fullName>
        <description>EAD Ex Ante</description>
        <label>EAD Ex Ante</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EAD_Ex_Post__c</fullName>
        <description>EAD Ex Post</description>
        <label>EAD Ex Post</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Encumbered_Indicator__c</fullName>
        <label>Encumbered Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encumbered_Maturity_Date__c</fullName>
        <description>Encumbered Maturity Date</description>
        <label>Encumbered Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Encumbered_Original_Date__c</fullName>
        <description>Encumbered Original Date</description>
        <label>Encumbered Original Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Number__c</fullName>
        <description>Facility Number</description>
        <label>Facility Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Source_System__c</fullName>
        <description>Facility Source System</description>
        <label>Facility Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_For_Service_Indicator__c</fullName>
        <description>Fee For Service Indicator</description>
        <label>Fee For Service Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Rate_Period_End_Date__c</fullName>
        <description>Fixed Rate Period End Date</description>
        <label>Fixed Rate Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Floating_Rate_Cap__c</fullName>
        <description>Floating Rate Cap</description>
        <label>Floating Rate Cap</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Floating_Rate_Code__c</fullName>
        <description>Floating Rate Code</description>
        <label>Floating Rate Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floating_Rate_Currency_Code__c</fullName>
        <description>Floating Rate Currency Code</description>
        <label>Floating Rate Currency Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floating_Rate_Floor__c</fullName>
        <description>Floating Rate Floor</description>
        <label>Floating Rate Floor</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Floating_Rate_Freq_Refresh_Code__c</fullName>
        <description>Floating Rate Freq Refresh Code</description>
        <label>Floating Rate Freq Refresh Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floating_Rate_Frequency__c</fullName>
        <description>Floating Rate Frequency</description>
        <label>Floating Rate Frequency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floating_Rate_Period_End_Date__c</fullName>
        <description>Floating Rate Period End Date</description>
        <label>Floating Rate Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Floating_Rate_Spread__c</fullName>
        <description>Floating Rate Spread</description>
        <label>Floating Rate Spread</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Funding_Rate__c</fullName>
        <description>Funding Rate</description>
        <label>Funding Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GL_Code_Block__c</fullName>
        <description>GL Code Block</description>
        <label>GL Code Block</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hyperion_Base_Entity__c</fullName>
        <description>Hyperion Base Entity</description>
        <label>Hyperion Base Entity</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Only_End_Date__c</fullName>
        <description>Interest Only End Date</description>
        <label>Interest Only End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Type_Code__c</fullName>
        <description>Interest Rate Type Code</description>
        <label>Interest Rate Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LGD_Lookup_Type_Code__c</fullName>
        <description>LGD Lookup Type Code</description>
        <label>LGD Lookup Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LGD_Percentage__c</fullName>
        <description>LGD Percentage</description>
        <label>LGD Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maturity_Options_Code__c</fullName>
        <description>Maturity Options Code</description>
        <label>Maturity Options Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Principal_Amount__c</fullName>
        <description>Net Principal Amount</description>
        <label>Net Principal Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Principal_Balance_Amount__c</fullName>
        <description>Net Principal Balance Amount</description>
        <label>Net Principal Balance Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>On_Balance_Indicator__c</fullName>
        <description>On Balance Indicator</description>
        <label>On Balance Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency_Code__c</fullName>
        <description>Payment Frequency Code</description>
        <label>Payment Frequency Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency_Interest_Code__c</fullName>
        <description>Payment Frequency Interest Code</description>
        <label>Payment Frequency Interest Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency_Principal_Code__c</fullName>
        <description>Payment Frequency Principal Code</description>
        <label>Payment Frequency Principal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Code__c</fullName>
        <description>Payment Method Code</description>
        <label>Payment Method Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type_Code__c</fullName>
        <description>Payment Type Code</description>
        <label>Payment Type Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payments_Received__c</fullName>
        <description>Payments Received</description>
        <label>Payments Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recourse_Indicator__c</fullName>
        <description>Recourse Indicator</description>
        <label>Recourse Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewable_Indicator__c</fullName>
        <description>Renewable Indicator</description>
        <label>Renewable Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residual_Value_Booked__c</fullName>
        <description>Residual Value Booked</description>
        <label>Residual Value Booked</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Risk_Costs__c</fullName>
        <description>Risk Costs</description>
        <label>Risk Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Securitization_Identifier__c</fullName>
        <description>Securitization Identifier</description>
        <label>Securitization Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Securitization_Indicator__c</fullName>
        <description>Securitization Indicator</description>
        <label>Securitization Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Securitization_Type_Code__c</fullName>
        <description>Securitization Type Code</description>
        <label>Securitization Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Syndication_Indicator__c</fullName>
        <description>Syndication Indicator</description>
        <label>Syndication Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Syndication_Percentage__c</fullName>
        <description>Syndication Percentage</description>
        <label>Syndication Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>System_Program_Description__c</fullName>
        <description>System Program Description</description>
        <label>System Program Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Program_Number__c</fullName>
        <description>System Program Number</description>
        <label>System Program Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Selling_Party_Description__c</fullName>
        <description>System Selling Party Description</description>
        <label>System Selling Party Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Selling_Party_Number__c</fullName>
        <description>System Selling Party Number</description>
        <label>System Selling Party Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Int Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Number__c</columns>
        <columns>Agreement_Status__c</columns>
        <columns>Agreement_Start_Date__c</columns>
        <columns>Agreement_Activation_Date__c</columns>
        <columns>Agreement_Maturity_Date__c</columns>
        <columns>Agreement_Rate__c</columns>
        <columns>Committed__c</columns>
        <columns>GL_Code_Block__c</columns>
        <columns>System_Program_Number__c</columns>
        <columns>System_Program_Description__c</columns>
        <columns>Floating_Rate_Cap__c</columns>
        <columns>Syndication_Indicator__c</columns>
        <columns>Syndication_Percentage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AGR-{0000000000}</displayFormat>
        <label>Agreement Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>